--- a/index.html
+++ b/index.html
@@ -64,20 +64,20 @@
         //specify an owner for the app - used by the print option. The default value will be the web map's owner
         owner: 'Hillsborough County',
         //Specify a color theme for the app. Valid options are gray,blue,purple,green and orange
-        theme: 'green',
+        theme: 'orange',
         //Optional tools - set to false to hide the tool
         //set to false to hide the zoom slider on the map 
         displayslider: true,
         displaymeasure: true,
         displaybasemaps: true,
         displayoverviewmap: true,
-        displayeditor: true,
+        displayeditor: false,
         displaylegend: true,
         displaysearch: true,
         displaylayerlist: true,
         displaybookmarks: true,
         displaydetails: true,
-        displaytimeslider: true,
+        displaytimeslider: false,
         displayprint: true,
         //i18n.viewer.main.scaleBarUnits,
         //The elevation tool uses the  measurement tool to draw the lines. So if this is set
@@ -86,7 +86,7 @@
         //This option is used when the elevation chart is displayed to control what is displayed when users mouse over or touch the chart. When true, elevation gain/loss will be shown from the first location to the location under the cursor/finger. 
         showelevationdifference: false,
         displayscalebar: true,
-        displayshare: true,
+        displayshare: false,
         //if enabled enter bitly key and login below.
         //The application allows users to share the map with social networking sites like twitter
         //and facebook. The url for the application can be quite long so shorten it using bit.ly. 
@@ -162,7 +162,7 @@
         leftpanewidth: 228,
         //Restrict the map's extent to the initial extent of the web map. When true users
         //will not be able to pan/zoom outside the initial extent.
-        constrainmapextent: false,
+        constrainmapextent: true,
         //Provide an image and url for a logo that will be displayed as a clickable image 
         //in the lower right corner of the map. If nothing is specified then the esri logo will appear.
         customlogo: {
