Floating Window for Visit Widget

--- a/index.html
+++ b/index.html
@@ -229,7 +229,11 @@
               <!--If a logo is specified in config section then the logo will be added
               to the map-->
             </div>
-            <!--Floating window that contains the measure dijit-->
+            <!-- Right panel for "build a visit" -->
+              <div id="visit">
+                  <div id="visitDiv"></div>
+              </div>
+              <!--Floating window that contains the measure dijit-->
             <div id="floater">
               <div id="measureDiv"></div>
             </div>
