Adding visit points to map.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
     <script type="text/javascript">
       dojo.require("esri.layout");
     </script>
-    <script type="text/javascript" src="../../templateConfig.js"></script>
+    <!-- ADDITION - Commented out JS because it was not included with the template download -->
+    <!--script type="text/javascript" src="../../templateConfig.js"></script-->
     <script type="text/javascript" src="javascript/layout.js">
     
     </script>
