Visit panel on left with placeholder content

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         displaysearch: true,
         displaylayerlist: true,
         displaybookmarks: true,
-        displaydetails: true,
+        displaydetails: false,
         displaytimeslider: false,
         displayprint: true,
         //i18n.viewer.main.scaleBarUnits,
