--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
         ////When editing you need to specify a proxyurl (see below) if the service is on a different domain
         //Specify a proxy url if you will be editing, using the elevation profile or have secure services or web maps that are not shared with everyone.
         proxyurl: "proxy/proxy.ashx",
-        //cases this will be null. 
+        //proxyurl: "proxy/proxy.php",
+        //cases this will be null.
         appid: "",
         //set to true to display the title
         displaytitle: true,
